tests/cases/lambdas/errors/err_fn_ref_sig.aipl
import { wrapping_add as + } from builtins;
// A named function passed to a user-defined higher-order function must match
// the expected function type.
fn apply(f: (str) -> str, x: str) -> str {
    f(x)
}

fn inc(n: i64) -> i64 {
    n + 1
}

fn main() -> str {
    apply(inc, "hi")
}
--- errors ---
error: fn "inc" expects a i64 argument, but will be called with str here
  --> input:13:11
   |
13 |     apply(inc, "hi")
   |           ^^^
